--- a/stylesheets/mainStyle.css
+++ b/stylesheets/mainStyle.css
@@ -312,22 +312,22 @@ div:not(:empt){
 
 #pindropBackground{
     background-color: blue;
+    max-width: 100vmax;
+    min-height: auto;
     width: 500px;
-    height: 460px;
+    height: auto;
     margin-top: 50px;
-    margin-left: 400px;  
-    border: 100px; 
+    margin: auto;  
     padding-bottom: 1px;
 }
 #pindropConfirm{
     background-color: white;
     width: 500px;
-    height: 100px;
-    padding-top: 20px;
-    padding-bottom: 70px;
-    margin-top: 50px;
-    margin-bottom: 10px;
+    font-weight: bolder;
     text-align: center;
+    padding-top: 30px; 
+    padding-bottom: 10px;
+    vertical-align: middle;
 }
 #pinDrop1{
     background-color: white;
@@ -343,13 +343,8 @@ div:not(:empt){
    }
 #pinDrop2{
     background-color: white;
-    text-align: left;
-    padding-left: 20px;
-    padding-top: 5px;
-    padding-bottom: 10px;
-    margin-right: 10px;
-    margin-left: 10px;
-    margin-bottom: 10px;
+    text-align: center;
+    font-weight: bolder;
 }
 
 /*CSS for all hyperlinks*/
