food zip resource api

--- a/mainStyle.css
+++ b/mainStyle.css
@@ -193,6 +193,11 @@ input{
 #zipCodeShelter{
     margin-left: 150px;
 }
+
+#zipCodeFood{
+    margin-left: 150px;
+}
+
 #sendzip{
     margin-left: -40px;
 }
